# genshin-overlay

./: Cargo.toml
src/: main.rs
