[package]
name = "genshin-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_wgpu_backend = "0.22.0"
egui = "0.21.0"
epi = "0.17.0"
egui_winit_platform = "0.18.0"
wgpu = "0.15.1"
winit = "0.28.3"
image = "0.24.6"
anyhow = "1.0.70"
tokio = { version = "1.26.0", features = ["macros","rt-multi-thread"] }
win-screenshot = "4.0.0"

[profile.release]
opt-level = 'z'
debug = 0
lto = true
incremental = false
codegen-units = 1
strip = "symbols"